sections overlap observer conflict fix

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -1,5 +1,5 @@
 html {
-  scroll-padding-top: 79px;
+  scroll-padding-top: 109px;
 }
 
 body {
